<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_AgregarEncuesta"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.20"
        android:textSize="18sp"
        android:onClick="registrarEncuesta"
        android:text="@string/btn_AgregarEncuesta"/>

    <Button
        android:id="@+id/btn_VerLista"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/btn_AgregarEncuesta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.20"
        android:textSize="18sp"
        android:onClick="listaEncuestados"
        android:text="@string/btn_VerLista"/>

    <Button
        android:id="@+id/btn_VerDatos"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/btn_VerLista"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.33"
        android:textSize="18sp"
        android:onClick="verDatos"
        android:text="@string/btn_VerDatos"/>

</androidx.constraintlayout.widget.ConstraintLayout>